--- a/static/css/main/positionDetail.css
+++ b/static/css/main/positionDetail.css
@@ -1566,3 +1566,205 @@ li>.btns{
     display: flex;
     justify-content: space-between;
 }
+
+.attachTitle>h2{
+    font-size: 16px;
+    line-height: 24px;
+    color: rgb(34, 34, 34);
+}
+
+.noFillRedDot::after{
+    display: inline-block;
+    margin: 0px 0px 4px 6px;
+    content: "";
+    width: 6px;
+    height: 6px;
+    background-color: unset;
+    box-sizing: border-box;
+    border: 1px solid rgb(240, 68, 82);
+    border-radius: 3px;
+}
+
+.attachInfo{
+    display: flex;
+    justify-content: space-between;
+}
+
+.attachInfo>p{
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(153, 153, 153);
+}
+
+.attachInfo>span, .attachInfo>label{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+
+.attachInfo>label{
+    display: flex;
+    align-items: flex-start;
+    cursor: pointer;
+}
+
+.attachInfo>label>svg{
+    width: 16px;
+    height: 16px;
+    margin: 2px 5px 0px 0px;
+}
+
+.attachFile{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 16px 0px;
+    border: 1px dashed rgb(228, 228, 228);
+    border-radius: 8px;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(153, 153, 153);
+    text-align: center;
+}
+
+.attachFile>h4{
+    margin-bottom: 8px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+}
+
+.attachFileOn{
+    display: flex;
+    flex-direction: column;
+    width: 100%
+}
+
+.attachFileContent{
+    position: relative;
+    padding: 16px;
+    border: 1px solid rgb(228, 228, 228);
+    border-radius: 8px;
+    margin-top: 8px;
+    cursor: pointer;
+}
+
+.attachFileContent:first-child{
+    margin-top: 0px;
+}
+
+.attachFileContent>div{
+    display: flex;
+    align-items: baseline;
+}
+
+.attachFileButton{
+    position: absolute;
+    bottom: 12px;
+    right: 12px;
+}
+
+.attachFileContent>div input[type="checkbox"] {
+    border-radius: 4px;
+}
+
+.attachFileContent > div input[type="radio"], .attachFileContent > div input[type="checkbox"] {
+    position: absolute;
+    top: 22px;
+    left: 16px;
+    width: 16px;
+    height: 16px;
+    border: 2px solid rgb(196, 196, 196);
+    background-color: rgb(255, 255, 255);
+    outline: none;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.attachFileContent > div input[type="checkbox"]:checked {
+    border-color: rgb(0, 221, 109);
+    background: url(../../images/main/attach-checked.svg) center center no-repeat !important;
+}
+
+.attachFileOn>p{
+    margin-top: 10px;
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(153, 153, 153);
+}
+
+.fileInfo{
+    margin-left: 32px;
+}
+
+.fileInfo>h3{
+    width: 280px;
+    overflow-wrap: break-word;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    margin-bottom: 4px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 22px;
+    color: rgb(34, 34, 34);
+}
+
+.fileInfo>p{
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(153, 153, 153);
+}
+
+.formElement>p{
+    margin-top: 10px;
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(153, 153, 153);
+}
+
+.attachFileButton a, .attachFileButton button{
+    margin-left: 12px;
+    padding: 4px 4px 0;
+}
+
+.attachFileButton a>svg, .attachFileButton button>svg{
+    width: 20px;
+    height: 20px;
+}
+
+.attachFileButton a>svg>path, .attachFileButton button>svg>path{
+    fill: rgb(153, 153, 153);
+}
+
+.formElement.last>div{
+    width: 334px;
+    flex-basis: 334px;
+    margin-bottom: 30px;
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(153, 153, 153);
+    white-space: pre-wrap;
+}
+
+.formElement.last>button{
+    display: flex;
+    align-items: center;
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(153, 153, 153);
+    text-decoration: underline;
+}
+
+.formElement.last>button svg{
+    margin-left: 4px;
+}
+
+.formElement.last>button svg path{
+    fill: rgb(196, 196, 196);
+}
