0210 주말간 작업사항 커밋

--- a/templates/resume/resume-main.html
+++ b/templates/resume/resume-main.html
@@ -392,11 +392,12 @@
                         <ul class="file-container">
                             <!-- 아래의 태그는 테스트용 태그라 인라인 속성 걸어놓음 -->
                             <!-- 나중에 서버까지 연동하면 꼭 li 태그+그 안의 코드들  지울 것! -->
-                            <li style="display: none">
+                            <!-- <li class="added-file">
                                 <span class="file-type">PDF</span
                                 ><span class="file-title">TEST1.pdf</span
                                 ><span class="file-create">2025.02.06 등록</span
-                                ><button type="button" class="file-remove">
+                                >
+                                <button type="button" class="file-remove">
                                     <svg
                                         xmlns="http://www.w3.org/2000/svg"
                                         width="16"
@@ -412,7 +413,7 @@
                                         ></path>
                                     </svg>
                                 </button>
-                            </li>
+                            </li> -->
                             <li class="empty-file">첨부파일이 비어있습니다.</li>
                         </ul>
                         <p class="file-add-area">
