--- a/static/css/resume/resume-edit1.css
+++ b/static/css/resume/resume-edit1.css
@@ -508,6 +508,10 @@
     height: 42px;
 }
 
+.header-right-user7 svg:hover{
+    transform: rotate(180deg);
+}
+
 .header-right-menu8 {
     display: none;
     position: absolute;
@@ -564,6 +568,7 @@
 .main-sc0 {
     background-color: rgb(255, 255, 255);
     padding-top: 65px;
+    height :2000px
 }
 
 .main-wrapper {
@@ -578,7 +583,7 @@
     margin: 0px auto;
     position: relative;
     align-items: center;
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
 }
 
 .main-content {
@@ -698,6 +703,31 @@
     border: 1px solid rgb(0, 221, 109);
 }
 
+.editMenuButton.clicked {
+    width: 26px;
+    height: 16px;
+    border-radius: 26px;
+    cursor: pointer;
+    position: relative;
+    background-color: rgb(228, 228, 228);
+    border: 1px solid rgb(228, 228, 228);
+}
+
+.editMenuButton.clicked::before {
+    content: "";
+    display: block;
+    position: absolute;
+    transition: 0.5s;
+    width: 14px;
+    height: 14px;
+    border-radius: 100%;
+    background-color: rgb(255, 255, 255);
+    top: 0px;
+    margin-left: 1px;
+}
+
+
+
 .editMenuButton::before {
     content: "";
     display: block;
@@ -753,6 +783,8 @@
     color: rgb(34, 34, 34);
     width: calc(100% - 80px);
 }
+
+
 
 .resumetop-text-img {
     display: inline-block;
@@ -930,8 +962,10 @@
     font-size: 15px;
 }
 
-.memberinfo1:first-child {
+.memberinfo1:nth-child(2) {
+    padding-right: 16px;
     margin-right: 16px;
+    max-width: 210px;
 }
 
 .memberinfo-img>svg {
@@ -997,11 +1031,16 @@
     font-size: 15px;
 }
 
-.memberinfo2:nth-child(2) {
+.memberinfo2:nth-child(3) {
+    padding-left: 32px;
+    padding-right: 0px;
+}
+
+/* .memberinfo2:nth-child(2) {
     padding-right: 16px;
     margin-right: 16px;
     max-width: 210px;
-}
+} */
 
 .memberinfo-text2 {
     display: flex;
@@ -1011,6 +1050,59 @@
     cursor: default;
     font-size: 15px;
     line-height: 22px;
+}
+
+.resumeradiobutton {
+    width: 26px;
+    height: 16px;
+    border-radius: 26px;
+    cursor: pointer;
+    position: relative;
+    background-color: rgb(228, 228, 228);
+    border: 1px solid rgb(228, 228, 228);
+}
+
+.resumeradiobutton::before {
+    content: "";
+    display: block;
+    position: absolute;
+    transition: 0.5s;
+    width: 14px;
+    height: 14px;
+    border-radius: 100%;
+    background-color: rgb(255, 255, 255);
+    top: 0px;
+    margin-left: 1px;
+}
+
+.resumeradiobutton.clicked {
+    width: 26px;
+    height: 16px;
+    border-radius: 26px;
+    cursor: pointer;
+    position: relative;
+    background-color: rgb(0, 221, 109);
+    border: 1px solid rgb(0, 221, 109);
+}
+
+.resumeradiobutton.clicked::before {
+    content: "";
+    display: block;
+    position: absolute;
+    transition: 0.5s;
+    width: 14px;
+    height: 14px;
+    border-radius: 100%;
+    background-color: rgb(255, 255, 255);
+    top: 0px;
+    margin-left: 10px;
+}
+
+.memberinfo-img > button {
+    position: absolute !important;
+    left: 0px;
+    top: 12px;
+    margin-top: -8px;
 }
 
 .memberinfo2:nth-child(2)>dd {
@@ -1045,12 +1137,46 @@
     margin-left: 2px !important;
 }
 
+.svghovered{
+    transform: rotate(180deg)
+}
+
 .memberinfo-text2-text svg path {
     fill: rgb(34, 34, 34);
 }
 
 .memberinfo-text2-text svg path {
     fill: rgb(196, 196, 196);
+}
+
+.memberinfo-text2-option {
+    position: absolute;
+    width: 140px;
+    border-radius: 4px;
+    margin-top: 300px;
+    left: 50px;
+    z-index: 3;
+}
+
+.memberinfo-text2-option ul {
+    box-shadow: rgba(20, 20, 20, 0.02) 0px 4px 8px 0px, rgba(20, 20, 20, 0.12) 4px 16px 24px 0px;
+    background-color: rgb(255, 255, 255);
+    overflow: hidden auto;
+    max-height: 260px;
+    padding: 10px 0px;
+    border-radius: 4px;
+}
+
+.memberinfo-text2-option ul li div {
+    padding: 0px 10px;
+    height: 50px;
+}
+
+.memberinfo-text2-option ul li div > label {
+    display: block;
+    padding: 12px 10px;
+    font-size: 15px;
+    line-height: 22px;
 }
 
 .memberbirth {
@@ -1097,7 +1223,7 @@
     top: -1px;
 }
 
-.memberinfo-tooltip-button-before {
+.memberinfo-tooltip-button-change.before {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1116,11 +1242,11 @@
     border: 1px solid rgb(196, 196, 196);
 }
 
-.memberinfo-tooltip-button-before::before {
+.memberinfo-tooltip-button-change.before::before {
     content: "?";
 }
 
-.memberinfo-tooltip-button-after {
+.memberinfo-tooltip-button-change.after {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1139,9 +1265,10 @@
     border: 1px solid rgb(34, 34, 34);
 }
 
-.memberinfo-tooltip-button-after::before {
+.memberinfo-tooltip-button-change.after::before {
     content: "?";
 }
+
 
 .resume-private {
     white-space: nowrap;
@@ -1158,6 +1285,11 @@
     font-size: 13px;
     line-height: 18px;
 }
+
+input:focus, textarea:focus{
+    border: none;
+}
+
 
 .resume-private>button {
     position: absolute;
@@ -1218,6 +1350,10 @@
     height: 24px;
     border: none;
 }
+.simplepr>textarea:hover,
+.simplepr>textarea:focus{
+    background-color: rgb(228, 228, 228);
+}
 
 .jobcategory {
     margin-top: 36px;
@@ -1239,6 +1375,43 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     width: 100%;
+}
+
+.jobcategory .select-wrap .select-item {
+    height: 20px;
+    padding: 8px 16px;
+    background-color: rgb(48, 54, 77);
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 18px;
+    color: rgb(255, 255, 255);
+    margin-right: 6px;
+    margin-bottom: 8px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    border-radius: 300px;
+}
+
+.jobcategory .select-wrap .btn-close {
+    position: relative;
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    margin: 0px 0px 0px 4px;
+    border-radius: 0px 4px;
+    color: rgb(255, 255, 255);
+}
+
+.jobcategory .select-wrap .btn-close::before {
+    position: absolute;
+    display: block;
+    width: 14px;
+    height: 14px;
+    background: url("https://jumpit.saramin.co.kr/assets/images/ic_close.svg") center center / 100% no-repeat;
+    content: "";
+    top: 0px;
+    left: 0px;
 }
 
 .jobcategory .box-select {
@@ -1303,7 +1476,7 @@
     box-shadow: rgba(20, 20, 20, 0.02) 0px 4px 8px 0px, rgba(20, 20, 20, 0.12) 4px 16px 24px 0px;
     background-color: rgb(255, 255, 255);
     margin-top: 8px;
-    z-index: 2;
+    z-index: 3;
 }
 
 .jobcategory-list ul {
@@ -1378,6 +1551,11 @@
     background-color: rgb(255, 255, 255);
     box-sizing: border-box;
     content: "";
+}
+
+.jobcategory-list ul li .inp-chk input:checked + label::before, .jobcategory-list ul li .inp-chk input:checked + label::after {
+    background-color: rgb(0, 221, 109);
+    border-color: rgb(255, 255, 255);
 }
 
 /*  */
@@ -2975,4 +3153,8 @@
 
 .bottombar .bottom-btns button:last-of-type {
     margin-right: 0px;
+}
+
+.hidden2 {
+    display: none;
 }
