--- a/static/css/main/positionDetail.css
+++ b/static/css/main/positionDetail.css
@@ -1260,6 +1260,7 @@ li>.btns{
     bottom: 0px;
     left: calc(50% + 190px);
     width: 470px;
+    padding: 0px;
 }
 
 .formWrapper{
@@ -1268,7 +1269,7 @@ li>.btns{
     flex-direction: column;
     background: rgb(255, 255, 255);
     border-radius: unset;
-    padding-top: 0px;
+    padding-top: 0;
 }
 
 .formElement{
@@ -1282,6 +1283,7 @@ li>.btns{
 }
 
 .formElement.first>p{
+    margin: 0;
     font-weight: 400;
     font-size: 15px;
     line-height: 22px;
@@ -1767,4 +1769,59 @@ li>.btns{
 
 .formElement.last>button svg path{
     fill: rgb(196, 196, 196);
+}
+
+.formButton{
+    position: relative;
+}
+
+.submitButton{
+    border: 1px solid rgb(196, 196, 196);
+    color: rgb(255, 255, 255);
+    padding: 0px 16px;
+    background: rgb(196, 196, 196);
+    height: 56px;
+    line-height: 54px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.formButton > button{
+    width: 100%;
+    height: 48px;
+    border-radius: unset;
+    font-size: 15px;
+    line-height: 22px;
+}
+
+/* 입사지원창 스크롤바 스타일 */
+.horizonalScroll::-webkit-scrollbar {
+    width: 8px;  /* 스크롤바의 너비 */
+    height: 5px; /* 수평 스크롤바 높이 */
+}
+
+.horizonalScroll::-webkit-scrollbar-track {
+    border-radius: 10px; /* 스크롤바 배경 둥글게 */
+}
+
+.horizonalScroll::-webkit-scrollbar-thumb {
+    background-color: rgb(228 228 228);; /* 스크롤바 색 */
+}
+
+.text-content {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-height: 1.5em; 
+}
+
+.text-content.expanded {
+    overflow: auto;
+    white-space: normal;
+    text-overflow: unset;
+    max-height: none;
+}
+
+.botCollapse {
+    display: none;
 }
