--- a/templates/main/MainPage.html
+++ b/templates/main/MainPage.html
@@ -180,7 +180,42 @@
                     <ul class="rightNavigation">
                         <!-- 기업 서비스 항목 생략 -->
                         <li>
-                            <a href="/">회원가입/로그인</a>
+                            <!-- 로그인 안 했을 때 있는 버튼 -->
+                            <a href="/" style="display: none"
+                                >회원가입/로그인</a
+                            >
+                            <!-- // 로그인 안 했을 때 있는 버튼 -->
+                            <!-- 로그인 이후에 뜨는 버튼 -->
+                            <div class="loginedMemberButton">
+                                <button type="button">홍길동님</button>
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="16"
+                                    height="16"
+                                    fill="none"
+                                    viewBox="0 0 16 16"
+                                >
+                                    <path
+                                        fill="#222"
+                                        fill-rule="evenodd"
+                                        d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
+                                        clip-rule="evenodd"
+                                    ></path>
+                                </svg>
+                            </div>
+                            <!-- 로그인 이후 버튼에 커서 갖다대면 뜨는 창 -->
+                            <div class="loginMemberNav">
+                                <ul>
+                                    <li>
+                                        <a href="">마이템프</a>
+                                    </li>
+                                    <li>
+                                        <button type="button">로그아웃</button>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- // 로그인 이후 버튼에 커서 갖다대면 뜨는 창 -->
+                            <!-- // 로그인 이후에 뜨는 버튼 -->
                         </li>
                     </ul>
                 </nav>
