--- a/templates/main/companyDetail.html
+++ b/templates/main/companyDetail.html
@@ -403,9 +403,168 @@
                             </dl>
                         </div>
                     </section>
-                    <section class="companyDetail compSection"></section>
-                    <section class="companyWelfare compSection"></section>
-                    <section class="companyEmployee compSection"></section>
+                    <section class="companyIntroduce compSection">
+                        <h2>회사 소개</h2>
+                        <div class="companyDetail">
+                            <pre class="companyDetailText">
+                                We Create Fun in The World
+                                즐거움을 만들고, 세상을 연결합니다.
+
+                                재미로 세상을 연결하는 레진엔터테인먼트는, 웹툰 및 웹소설 플랫폼 ‘봄툰’ ‘레진’ ‘델리툰’ 뿐만 아니라 오리지널 웹툰 제작 스튜디오를 운영하고 있습니다.
+                                나아가 영상콘텐츠 사업까지 영위하는 글로벌 종합 콘텐츠 기업에 합류하세요!
+                            </pre>
+                            <button
+                                aria-expanded="false"
+                                class="companyDetailButton"
+                            >
+                                <span class="buttonText">더 보기</span>
+                                <svg
+                                    class="expandIcon"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="16"
+                                    height="16"
+                                    fill="none"
+                                    viewBox="0 0 16 16"
+                                    aria-hidden="true"
+                                >
+                                    <path
+                                        fill="#222"
+                                        fill-rule="evenodd"
+                                        d="M13.472 5.195c.26.26.26.683 0 .943l-5 5a.667.667 0 0 1-.943 0l-5-5a.667.667 0 1 1 .943-.943L8 9.724l4.529-4.529c.26-.26.682-.26.943 0Z"
+                                        clip-rule="evenodd"
+                                    ></path>
+                                </svg>
+                                <svg
+                                    class="collapseIcon"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="16"
+                                    height="16"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    aria-hidden="true"
+                                >
+                                    <path
+                                        fill="#000"
+                                        fill-rule="evenodd"
+                                        d="M3.793 16.207a1 1 0 0 1 0-1.414l7.5-7.5a1 1 0 0 1 1.414 0l7.5 7.5a1 1 0 0 1-1.414 1.414L12 9.414l-6.793 6.793a1 1 0 0 1-1.414 0Z"
+                                        clip-rule="evenodd"
+                                    ></path>
+                                </svg>
+                            </button>
+                            <div class="gradient compnayDetailHide"></div>
+                        </div>
+                        <div class="companyImages">
+                            <img
+                                src="https://cdn.jumpit.co.kr/lg/images/syyun_26773/20232607112656155_1080_790.webp"
+                                height="169"
+                                width="202"
+                            />
+                            <img
+                                src="https://cdn.jumpit.co.kr/lg/images/syyun_26773/20232607112658487_1080_790.webp"
+                                height="169"
+                                width="202"
+                            />
+                            <img
+                                src="https://cdn.jumpit.co.kr/lg/images/syyun_26773/20232607112653349_1080_790.webp"
+                                height="169"
+                                width="202"
+                            />
+                            <div class="moreContentPc">+ 1</div>
+                            <div class="modalWrapper">
+                                <div class="moreImageModal">
+                                    <span class="modalCloseButton">×</span>
+                                    <span class="moduleLeftButton">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="64"
+                                            height="64"
+                                            fill="none"
+                                            viewBox="0 0 64 64"
+                                        >
+                                            <circle
+                                                cx="32"
+                                                cy="32"
+                                                r="32"
+                                                fill="#fff"
+                                                opacity="0.9"
+                                            ></circle>
+                                            <path
+                                                stroke="#222"
+                                                stroke-width="2"
+                                                d="M35.334 21.333 24.667 32l10.667 10.667"
+                                            ></path>
+                                        </svg>
+                                    </span>
+                                    <span class="moduleRightButton">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="64"
+                                            height="64"
+                                            fill="none"
+                                            viewBox="0 0 64 64"
+                                        >
+                                            <circle
+                                                cx="32"
+                                                cy="32"
+                                                r="32"
+                                                fill="#fff"
+                                                opacity="0.9"
+                                            ></circle>
+                                            <path
+                                                stroke="#222"
+                                                stroke-width="2"
+                                                d="M28.666 42.667 39.333 32 28.666 21.333"
+                                            ></path>
+                                        </svg>
+                                    </span>
+                                    <div class="moduleContent">
+                                        <div class="moduleSlide">
+                                            <img
+                                                src="https://cdn.jumpit.co.kr/lg/images/syyun_26773/20232607112656155_1080_790.webp"
+                                            />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="companyWelfare compSection">
+                        <h2>복지 및 혜택</h2>
+                        <pre class="content">
+업무에만 집중할 수 있도록,
+• 최신 사양 업무 장비 지급
+• 시차 출퇴근제 운영 (7시~10시 사이 출근)
+• 개인 법인카드를 이용한 점심 지원 (일 12,000원)
+• 사내 카페 음료 지원
+• 부득이한 야근 시 택시비 지원
+• 무제한 간식 제공
+
+재직자의 건강과 리프레시를 위해,
+• 법적 연차 외 5일의 추가 연차 지급 (중도 입사자 일할 계산)
+• 주택 자금 대출 지원
+• 경조사 지원
+• 명절 상여/선물 지급
+• 사고나 질병에 대비한 단체 상해 보험 제공 (배우자, 자녀 포함)
+• 근속 3년 단위 보너스 & 특별 휴가 제공
+• 휴식을 위한 그룹사 연수원 및 기업 연계 휴양소 지원
+
+재직자의 성장을 위해,
+• 자기 개발을 위한 직무 도서 지원
+• 직무 교육 지원
+                        </pre>
+                    </section>
+                    <section class="companyEmployee compSection">
+                        <h2>기업 직원 규모</h2>
+                        <em class="date">(최근 6개월)</em>
+                        <span class="source">출처: 국민연금</span>
+                        <div class="info">
+                            <span>전체 직원수</span>
+                            <strong>226명</strong>
+                        </div>
+                        <div class="employeeGraph"></div>
+                    </section>
+                    <section class="companySalary compSection"></section>
+                    <section class="companyInvestment compSection"></section>
                     <section class="companyIngPosition compSection"></section>
                 </div>
                 <nav class="sideNavigation"></nav>
